staff creation done

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -280,7 +280,12 @@
   "staff-members":"طاقم العمل",
   "add-member":"إضافة عضو",
   "designation":"تعيين",
-  "download-QR":"تحميل QR"
+  "download-QR":"تحميل QR",
+  "bulk-upload":"تحميل مجمع",
+  "role-is-required":"الدور مطلوب",
+  "select-role":" حدد الدور..."
+
+
 
 
 
