button order fix.

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -285,7 +285,8 @@
   "role-is-required":"الدور مطلوب",
   "select-role":" حدد الدور...",
   "staff-deleted-successfully" : "تم حذف الموظفين بنجاح",
-  "download-all-qr" : "تحميل جميع QR"
+  "download-all-qr" : "تحميل جميع QR",
+  "sample-download" : "تنزيل العينة"
 
 
 
