Multi select in manage orders.

--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -289,6 +289,12 @@
   "staff-deleted-successfully" : "Staff Deleted Successfully",
   "download-all-qr" : "Download All QR",
   "sample-download" : "Sample Download",
-  "table-number-should-be-alphanumeric-or-with-hyphen" : "Table Number Should be Alphanumeric or with Hyphen"
+  "table-number-should-be-alphanumeric-or-with-hyphen" : "Table Number Should be Alphanumeric or with Hyphen",
+  "capacity-optional" : "Capacity (Optional)",
+  "select-some-items" : "Select Some Table Categories",
+  "all-items-are-selected" : "All Categories are Selected",
+  "select-all" : "Select All",
+  "search" : "Search"
+
 
 }
