--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -287,7 +287,12 @@
   "staff-deleted-successfully" : "تم حذف الموظفين بنجاح",
   "download-all-qr" : "تحميل جميع QR",
   "sample-download" : "تنزيل العينة",
-  "table-number-should-be-alphanumeric-or-with-hyphen" : "يجب أن يكون رقم الجدول أبجديًا رقميًا أو مع واصلة"
+  "table-number-should-be-alphanumeric-or-with-hyphen" : "يجب أن يكون رقم الجدول أبجديًا رقميًا أو مع واصلة",
+  "capacity-optional" : "السعة (اختياري)",
+  "select-some-items" : "حدد بعض فئات الجدول",
+  "all-items-are-selected" : "تم تحديد جميع الفئات",
+  "select-all" : "اختر الكل",
+  "search" : "يبحث"
 
 
 
