chore: Added messages in translation function.

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -288,11 +288,16 @@
   "download-all-qr" : "تحميل جميع QR",
   "sample-download" : "تنزيل العينة",
   "table-number-should-be-alphanumeric-or-with-hyphen" : "يجب أن يكون رقم الجدول أبجديًا رقميًا أو مع واصلة",
+  "table-number-should-be-numeric" : "يجب أن يكون رقم الجدول رقميًا",
   "capacity-optional" : "السعة (اختياري)",
   "select-some-items" : "حدد بعض فئات الجدول",
   "all-items-are-selected" : "تم تحديد جميع الفئات",
   "select-all" : "اختر الكل",
-  "search" : "يبحث"
+  "search" : "يبحث",
+  "enter-valid-category" : "أدخل فئة صالحة",
+  "please-enter-category" : "الرجاء إدخال الفئة",
+  "capacity-should-be-numeric" : "يجب أن تكون السعة رقمية"
+
 
 
 
