--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -271,7 +271,7 @@
   "disabled-table":"Disabled table",
   "disabled":"Disabled",
   "blank-table": "Blank Table",
-  "reserve": "Reserve",
+  "reserve-table": "Reserve Table",
   "running-KOT-table": "Running KOT Table",
   "edit-table":"Edit Table",
   "non-ac":"Non-Ac",
