--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -306,20 +306,16 @@
   "start-cooking":"ابدأ الطهي",
   "mark-as-done":"اعتبره منته",
   "yes":"نعم",
-  "view-order":"مشاهدة الطلب"
-
-
-
-  
-
-
-
-
-
-
-
-
-
+  "view-order":"مشاهدة الطلب",
+  "orders-history":"تاريخ الطلبات",
+  "order-type":"نوع الطلب",
+  "item-name":"اسم العنصر",
+  "quantity":"كمية",
+  "waiter-name":"اسم النادل",
+  "order":"طلب",
+  "total-amount":"المبلغ الإجمالي",
+  "kot-history":"تاريخ كوت",
+  "kds-screen":"شاشة كي دي اس"
 
 
 
