add less more on line

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -363,8 +363,8 @@
   "quanitity":"كمية",
   "customer-name":"اسم الزبون",
   "sort-by-date":"رتب حسب التاريخ",
-  "apply":"يتقدم"
-
+  "apply":"يتقدم",
+  "less":"أقل"
 
 
 
