--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -321,6 +321,8 @@
   "quanitity":"Quantity",
   "customer-name":"Customer Name",
   "sort-by-date":"Sort By Date",
-  "apply":"Apply"
+  "apply":"Apply",
+  "less":"Less"
+
 
 }
