replace more text to view

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -364,7 +364,8 @@
   "customer-name":"اسم الزبون",
   "sort-by-date":"رتب حسب التاريخ",
   "apply":"يتقدم",
-  "less":"أقل"
+  "view":"منظر"
+
 
 
 
