--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -322,7 +322,7 @@
   "customer-name":"Customer Name",
   "sort-by-date":"Sort By Date",
   "apply":"Apply",
-  "less":"Less"
+  "view":"View"
 
 
 }
